<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dp_8"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/dp_8"
    tools:context="com.example.android.storeinventory.ProductActivity">

    <RelativeLayout
        android:id="@+id/product_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:contentDescription="@string/product_empty_view"
            android:id="@+id/product_empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/empty_store_1"/>

        <TextView
            android:id="@+id/product_empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/dp_16"
            android:text="@string/looks_like_empty_store"
            android:layout_below="@id/product_empty_image"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/product_empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_empty_title_text"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/get_started_by_adding_a_product"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#84898e"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/product_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/product_cancel_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:id="@+id/cancel_caps"
                android:text="@string/cancel_caps"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default"
                android:id="@+id/delete_num"
                android:text="@string/delete_num"
                android:gravity="center"
                android:alpha="0.5"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>